Some deprecated API gating
Remove now defunct new serial executor